Fixed QTCREATORBUG-745.

Fixed crash in FindUsages on a dirty file in a large project, which is saved
while the FindUsages is still running.